feat: create specification and pages books